--- a/source/catalog.html
+++ b/source/catalog.html
@@ -164,58 +164,63 @@
         </div>
       </section>
 
-      <div class="main-container__catalog-wrapper container">
         <section class="main-container__additional-products additional-products">
+
           <div class="decor-line">
-            <h2 class="additional-products__title heading">Дополнительные товары</h2>
+            <div class="container">
+              <h2 class="additional-products__title heading">Дополнительные товары</h2>
+            </div>
           </div>
 
-          <ul class="additional-products__product-list product-list-secondary">
+          <div class="additional-products__wrapper container">
 
-            <li class="product-list__item product-card product-card--secondary">
-              <h3 class="product-card__title heading">Сахарозаменитель</h3>
-              <dl class="product-card__product-details">
-                <dt class="product-card__termin">1 упакова (100 г)</dt>
-                <dd class="product-card__description">200 &#8381;</dd>
-              </dl>
-              <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
-            </li>
+            <ul class="additional-products__product-list product-list-secondary">
 
-            <li class="product-list__item product-card product-card--secondary">
-              <h3 class="product-card__title heading">Питьевая вода</h3>
-              <dl class="product-card__product-details">
-                <dt class="product-card__termin">5 литров</dt>
-                <dd class="product-card__description">50 &#8381;</dd>
-              </dl>
-              <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
-            </li>
+              <li class="product-list__item product-card product-card--secondary">
+                <h3 class="product-card__title product-card__title--secondary heading">Сахарозаменитель</h3>
+                <dl class="product-card__product-details">
+                  <dt class="product-card__termin">1 упакова (100 г)</dt>
+                  <dd class="product-card__description">200 &#8381;</dd>
+                </dl>
+                <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
+              </li>
 
-            <li class="product-list__item product-card product-card--secondary">
-              <h3 class="product-card__title heading">Молоко</h3>
-              <dl class="product-card__product-details">
-                <dt class="product-card__termin">1 литр</dt>
-                <dd class="product-card__description">100 &#8381;</dd>
-              </dl>
-              <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
-            </li>
+              <li class="product-list__item product-card product-card--secondary">
+                <h3 class="product-card__title product-card__title--secondary heading">Питьевая вода</h3>
+                <dl class="product-card__product-details">
+                  <dt class="product-card__termin">5 литров</dt>
+                  <dd class="product-card__description">50 &#8381;</dd>
+                </dl>
+                <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
+              </li>
 
-            <li class="product-list__item product-card product-card--secondary">
-              <h3 class="product-card__title heading">Витамины</h3>
-              <dl class="product-card__product-details">
-                <dt class="product-card__termin">1 упаковка (30 г)</dt>
-                <dd class="product-card__description">300 &#8381;</dd>
-              </dl>
-              <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
-            </li>
-          </ul>
+              <li class="product-list__item product-card product-card--secondary">
+                <h3 class="product-card__title product-card__title--secondary heading">Молоко</h3>
+                <dl class="product-card__product-details">
+                  <dt class="product-card__termin">1 литр</dt>
+                  <dd class="product-card__description">100 &#8381;</dd>
+                </dl>
+                <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
+              </li>
+
+              <li class="product-list__item product-card product-card--secondary">
+                <h3 class="product-card__title product-card__title--secondary heading">Витамины</h3>
+                <dl class="product-card__product-details">
+                  <dt class="product-card__termin">1 упаковка (30 г)</dt>
+                  <dd class="product-card__description">300 &#8381;</dd>
+                </dl>
+                <a class="product-card__link product-card__link--secondary button" href="#">Заказать</a>
+              </li>
+            </ul>
+
+            <div class="special-offer additional-products__offer">
+              <h2 class="visually-hidden">Специальное предложение.</h2>
+              <p class="special-offer__text">Закажите все и получите чехол для кота в подарок!</p>
+            </div>
+
+          </div>
 
         </section>
-
-        <section class="main-container__special-offer special-offer">
-          <h2 class="visually-hidden">Специальное предложение.</h2>
-          <p class="special-offer__text">Закажите все и получите чехол для кота в подарок!</p>
-        </section>
-      </div>
 
       <section class="address address--secondary">
         <div class="container">
