--- a/source/form.html
+++ b/source/form.html
@@ -89,7 +89,7 @@
             </ul>
           </fieldset>
 
-          <fieldset class="program-form__group">
+          <fieldset class="program-form__group program-form__group--owner">
             <legend class="program-form__group-title">Контактные данные (владельца кота)</legend>
 
             <label class="program-form__label">
@@ -103,15 +103,15 @@
             </label>
           </fieldset>
 
-          <fieldset class="program-form__group">
+          <fieldset class="program-form__group program-form__group--commentary">
             <legend class="program-form__group-title">Комментарий</legend>
             <label class="program-form__label">
               <textarea class="program-form__textarea" name="commentary" placeholder="Расскажите обо всех повадках кота"></textarea>
             </label>
           </fieldset>
 
-          <fieldset class="program-form__group">
-            <legend class="program-form__group-title">Дополнительно</legend>
+          <fieldset class="program-form__group program-form__group--additional">
+            <legend class="program-form__group-title program-form__group-title-additional">Дополнительно</legend>
 
             <ul class="program-form__list program-form__list--additional checkbox">
               <li class="checkbox__item">
@@ -154,9 +154,11 @@
       </form>
 
       <section class="address address--secondary">
-        <div class="address__wrapper container">
-          <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
-          <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <div class="container">
+          <div class="address__wrapper">
+            <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+            <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          </div>
         </div>
         <div class="address__map map">
           <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
