--- a/source/index.html
+++ b/source/index.html
@@ -9,13 +9,13 @@
   <body class="page__body">
 
     <header class="main-header">
-      <div class="main-header__wrapper">
+      <div class="container main-header__wrapper">
         <a href="index.html" class="main-header__logo">
           <img class="main-header__trademark primary-trademark" src="img/primary-trademark.svg" width="44" height="44" alt="Основной фирменный знак 'Кэт энерджи'.">
           <img class="main-header__trademark secondary-trademark" src="img/secondary-trademark.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи' на мобильных устройствах.">
           <img class="main-header__logo-image logo" src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
         </a>
-        <nav class="main-header__nav main-nav">
+        <nav class="main-header__nav main-nav main-nav--no-js">
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
@@ -32,7 +32,7 @@
       </div>
     </header>
 
-    <main class="main-container">
+    <main class="page__main-container main-container">
       <h1 class="visually-hidden">Магазин кормов для котов "Кэт энерджи".</h1>
 
       <section class="main-container__promo promo promo--theme-phone">
@@ -45,33 +45,33 @@
       </section>
 
       <div class="main-container__feed-serie-wrapper container">
-        <section class="main-container__feed-serie feed-serie feed-serie--slim">
+        <section class="feed-serie feed-serie--slim">
             <h2 class="feed-serie__title heading">Похудение</h2>
             <p class="feed-serie__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="feed-serie__link link link--has-icon" href="catalog.html">Каталог Slim</a>
+            <a class="feed-serie__link link" href="catalog.html">Каталог Slim</a>
         </section>
 
-        <section class="main-container__feed-serie feed-serie feed-serie--pro">
+        <section class="feed-serie feed-serie--pro">
             <h2 class="feed-serie__title heading">Набор массы</h2>
             <p class="feed-serie__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="feed-serie__link link link--has-icon" href="catalog.html">Каталог Pro</a>
+            <a class="feed-serie__link link" href="catalog.html">Каталог Pro</a>
         </section>
       </div>
 
       <section class="main-container__guide guide">
         <div class="container">
           <h2 class="guide__title heading">Как это работает</h2>
-          <ul class="guide__list guide__list--theme-phone">
-            <li class="guide__list-item">
+          <ul class="guide__list">
+            <li class="guide__list-item guide__list-item--leaf">
               <p class="guide__list-text">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
-            <li class="guide__list-item">
+            <li class="guide__list-item guide__list-item--powder">
               <p class="guide__list-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
-            <li class="guide__list-item">
+            <li class="guide__list-item guide__list-item--food">
               <p class="guide__list-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
-            <li class="guide__list-item">
+            <li class="guide__list-item guide__list-item--time">
               <p class="guide__list-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
           </ul>
@@ -80,21 +80,19 @@
 
       <section class="example-cat">
         <div class="example-cat__container container">
-          <div class="example-cat__content-container">
-            <h2 class="example-cat__title heading">Живой пример</h2>
-            <p class="example-cat__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-            <dl class="example-cat__description-list">
-              <div class="example-cat__description-item">
-                <dt class="example-cat__description-termin">Снижение веса</dt>
-                <dd class="example-cat__description-text">5 кг</dd>
-              </div>
-              <div class="example-cat__description-item">
-                <dt class="example-cat__description-termin">Затрачено времени</dt>
-                <dd class="example-cat__description-text">60 дней</dd>
-              </div>
-            </dl>
-            <span class="example-cat__costs-caption">Затраты на питание: 15 000 руб.</span>
-          </div>
+          <h2 class="example-cat__title heading">Живой пример</h2>
+          <p class="example-cat__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <dl class="example-cat__description-list">
+            <div class="example-cat__description-item">
+              <dt class="example-cat__description-termin">Снижение веса</dt>
+              <dd class="example-cat__description-text">5 кг</dd>
+            </div>
+            <div class="example-cat__description-item">
+              <dt class="example-cat__description-termin">Затрачено времени</dt>
+              <dd class="example-cat__description-text">60 дней</dd>
+            </div>
+          </dl>
+          <span class="example-cat__costs-caption">Затраты на питание:<br class="example-cat__line-break"> 15 000 руб.</span>
           <figure class="example-cat__image-wrapper slider">
             <div class="slider__toggle"></div>
             <img class="slider__image" src="img/cat-before.png" width="280" height="256" alt="Кот Борис до употребления корма 'Кэт энерджи'.">
@@ -108,11 +106,11 @@
         <div class="container">
           <div class="address__wrapper">
             <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
-            <p class="address__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+            <p class="address__text">ул.&nbsp;Большая<br> Конюшенная, д.&nbsp;19/8 <span class="address__text-line-break">Санкт-Петербург</span></p>
           </div>
         </div>
         <div class="address__map map">
-          <img class="map__image" src="img/map-image.jpg" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
+          <iframe class="map__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1682413769572!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Карта местоположения компании 'Кэт энерджи'."></iframe>
         </div>
       </section>
     </main>
@@ -153,5 +151,6 @@
         </section>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
