--- a/source/form.html
+++ b/source/form.html
@@ -98,11 +98,11 @@
 
         <fieldset class="program-form__group program-form__group--owner">
 
-          <div class="program-form__group-title-wrapper decor-line decor-line--owner">
-            <div class="container">
-              <legend class="program-form__group-title">Контактные данные<br class="program-form__line-break"> (владельца кота)</legend>
-            </div>
-          </div>
+          <legend class="program-form__group-title-wrapper decor-line decor-line--owner">
+            <span class="container">
+              <span class="program-form__group-title">Контактные данные<br class="program-form__line-break"> (владельца кота)</span>
+            </span>
+          </legend>
 
           <div class="container program-form__input-wrapper program-form__input-wrapper--owner">
             <label class="program-form__label program-form__label--has-icon program-form__label--email">
@@ -118,11 +118,12 @@
         </fieldset>
 
         <fieldset class="program-form__group program-form__group--commentary">
-          <div class="program-form__group-title-wrapper decor-line">
-            <div class="container">
-              <legend class="program-form__group-title">Комментарий</legend>
-            </div>
-          </div>
+
+          <legend class="program-form__group-title-wrapper decor-line">
+            <span class="container">
+              <span class="program-form__group-title">Комментарий</span>
+            </span>
+          </legend>
 
           <div class="container">
             <label class="program-form__label">
@@ -134,11 +135,11 @@
 
         <fieldset class="program-form__group program-form__group--additional">
 
-          <div class="program-form__group-title-wrapper program-form__group-title-wrapper--additional decor-line">
-            <div class="container">
-              <legend class="program-form__group-title">Дополнительно</legend>
-            </div>
-          </div>
+          <legend class="program-form__group-title-wrapper program-form__group-title-wrapper--additional decor-line">
+            <span class="container">
+              <span class="program-form__group-title">Дополнительно</span>
+            </span>
+          </legend>
 
           <div class="container">
             <ul class="program-form__list program-form__list--additional checkbox">
