--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,15 +39,16 @@
 
       <section class="main-container__main-products main-products">
         <h2 class="visually-hidden">Основные товары.</h2>
-        <ul class="main-products__product-list product-list-main">
-          <div class="product-list-main__wrapper">
+
+        <div class="main-products__inner">
+          <ul class="main-products__product-list product-list-main">
             <li class="product-list-main__item product-card-main">
               <div class="product-card-main__wrapper">
                 <a href="#" class="product-card-main__image-link">
                   <img class="product-card-main__image" src="img/catalog-1.jpg" width="68" height="86" alt="">
                 </a>
                 <h3 class="product-card-main__title heading">Cat Energy PRO 500&nbsp;г</h3>
-                <div class="product-card-main__product-details">
+                <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
                     <dd class="product-card-main__description">500г</dd>
@@ -73,7 +74,7 @@
                   <img class="product-card-main__image" src="img/catalog-2.jpg" width="84" height="100" alt="">
                 </a>
                 <h3 class="product-card-main__title heading">Cat Energy PRO 1000&nbsp;г</h3>
-                <div class="product-card-main__product-details">
+                <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
                     <dd class="product-card-main__description">1000&nbsp;г</dd>
@@ -99,7 +100,7 @@
                   <img class="product-card-main__image" src="img/catalog-3.jpg" width="68" height="78" alt="">
                 </a>
                 <h3 class="product-card-main__title heading">Cat Energy PRO 500&nbsp;г</h3>
-                <div class="product-card-main__product-details">
+                <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
                     <dd class="product-card-main__description">500&nbsp;г</dd>
@@ -125,7 +126,7 @@
                   <img class="product-card-main__image" src="img/catalog-4.jpg" width="84" height="100" alt="">
                 </a>
                 <h3 class="product-card-main__title heading">Cat Energy PRO 1000&nbsp;г</h3>
-                <div class="product-card-main__product-details">
+                <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
                     <dd class="product-card-main__description">1000&nbsp;г</dd>
@@ -151,7 +152,7 @@
                   <img class="product-card-main__image" src="img/catalog-5.jpg" width="68" height="78" alt="">
                 </a>
                 <h3 class="product-card-main__title heading">Cat Energy SLIM 500&nbsp;г</h3>
-                <div class="product-card-main__product-details">
+                <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
                     <dd class="product-card-main__description">500&nbsp;г</dd>
@@ -177,7 +178,7 @@
                   <img class="product-card-main__image" src="img/catalog-6.jpg" width="84" height="100" alt="">
                 </a>
                 <h3 class="product-card-main__title heading">Cat Energy SLIM 1000&nbsp;г</h3>
-                <div class="product-card-main__product-details">
+                <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
                     <dd class="product-card-main__description">1000&nbsp;г</dd>
@@ -203,7 +204,7 @@
                   <img class="product-card-main__image" src="img/catalog-7.jpg" width="72" height="84" alt="">
                 </a>
                 <h3 class="product-card-main__title heading">Cat Energy SLIM 500&nbsp;г</h3>
-                <div class="product-card-main__product-details">
+                <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
                     <dd class="product-card-main__description">500&nbsp;г</dd>
@@ -230,8 +231,8 @@
                 <a class="product-card-main__link product-card-main__link--more button" href="#">Показать все</a>
               </div>
             </li>
-          </div>
-        </ul>
+          </ul>
+        </div>
       </section>
 
         <section class="main-container__additional-products additional-products">
