Исправление вещей, несоответствующих макету

--- a/source/form.html
+++ b/source/form.html
@@ -45,15 +45,15 @@
       </div>
 
       <form class="program-form" action="https://echo.htmlacademy.ru/" method="post">
-        <div class="container program-form__text-wrapper">
+        <div class="container program-form__container">
           <p class="program-form__text">Заполните анкету, и мы подберем программу питания для вашего кота</p>
         </div>
 
-        <div class="program-form__wrapper">
-          <fieldset class="program-form__group program-form__group--cat-information">
+        <div class="program-form__inner">
+          <fieldset class="program-form__group program-form__group--cat">
             <legend class="visually-hidden">Основная информация о коте.</legend>
 
-            <div class="container program-form__input-wrapper program-form__cat-wrapper">
+            <div class="container program-form__container program-form__input-wrapper program-form__input-wrapper--cat">
               <label class="program-form__label">
                 <span class="program-form__label-text">Имя:*</span>
                 <input class="program-form__input" type="text" name="cat-name" placeholder="Барсик" required>
@@ -65,15 +65,15 @@
               </label>
 
               <label class="program-form__label">
-                <span class="program-form__label-text">Возраст&nbsp(лет):</span>
+                <span class="program-form__label-text">Возраст&nbsp;(лет):</span>
                 <input class="program-form__input" type="text" name="cat-age" placeholder="7">
               </label>
             </div>
           </fieldset>
 
-          <fieldset class="program-form__group program-form__group--feed-program">
+          <fieldset class="program-form__group program-form__group--feed">
             <legend class="visually-hidden">Программа питания.</legend>
-            <div class="container program-form__feed-wrapper">
+            <div class="container program-form__container program-form__feed-wrapper">
               <ul class="program-form__list radio">
                 <li class="radio__item">
                   <label class="radio__label">
@@ -103,15 +103,15 @@
           </fieldset>
         </div>
 
-        <fieldset class="program-form__group program-form__group--owner">
+        <fieldset class="program-form__group">
 
           <legend class="program-form__group-title-wrapper decor-line decor-line--owner">
-            <span class="container">
+            <span class="container decor-line__container">
               <span class="program-form__group-title">Контактные данные<br class="program-form__line-break"> (владельца кота)</span>
             </span>
           </legend>
 
-          <div class="container program-form__input-wrapper program-form__input-wrapper--owner">
+          <div class="container program-form__container program-form__input-wrapper program-form__input-wrapper--owner">
             <label class="program-form__label program-form__label--has-icon program-form__label--email">
               <span class="program-form__label-text">e-mail:*</span>
               <input class="program-form__input program-form__input--has-icon" type="email" name="email" placeholder="kuklachev@gmail.com" required pattern="\w+@[a-zA-Z]+\.[a-zA-Z]+">
@@ -124,16 +124,16 @@
           </div>
         </fieldset>
 
-        <fieldset class="program-form__group program-form__group--commentary">
+        <fieldset class="program-form__group">
 
           <legend class="program-form__group-title-wrapper decor-line">
-            <span class="container">
+            <span class="container decor-line__container">
               <span class="program-form__group-title">Комментарий</span>
             </span>
           </legend>
 
           <div class="container">
-            <label class="program-form__label">
+            <label class="program-form__label program-form__container">
               <textarea class="program-form__textarea" name="commentary" placeholder="Расскажите обо всех повадках кота"></textarea>
             </label>
           </div>
@@ -143,12 +143,12 @@
         <fieldset class="program-form__group program-form__group--additional">
 
           <legend class="program-form__group-title-wrapper program-form__group-title-wrapper--additional decor-line">
-            <span class="container">
+            <span class="container decor-line__container">
               <span class="program-form__group-title">Дополнительно</span>
             </span>
           </legend>
 
-          <div class="container">
+          <div class="container program-form__container">
             <ul class="program-form__list program-form__list--additional checkbox">
               <li class="checkbox__item">
                 <label class="checkbox__label">
@@ -185,7 +185,7 @@
           </div>
         </fieldset>
 
-        <div class="container">
+        <div class="container program-form__container">
           <div class="program-form__button-wrapper">
             <button class="program-form__button button" type="submit">Отправить заявку</button>
             <span class="program-form__note">* — Обязательные поля</span>
