--- a/source/index.html
+++ b/source/index.html
@@ -51,8 +51,8 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/promo-image-tablet.webp 1x, img/promo-image-tablet@2x.webp 2x" width="709" height="609">
             <source type="image/webp" srcset="img/promo-image-mobile.webp 1x, img/promo-image-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1200px)" srcset="img/promo-image-desktop.png 1x, img/promo-image-desktop@2x.png 2x" width="552" height="499">
-            <source media="(min-width: 768px)" srcset="img/promo-image-tablet.png 1x, img/promo-image-tablet@2x.png 2x" width="709" height="609">
+            <source type="image/png" media="(min-width: 1200px)" srcset="img/promo-image-desktop.png 1x, img/promo-image-desktop@2x.png 2x" width="552" height="499">
+            <source type="image/png" media="(min-width: 768px)" srcset="img/promo-image-tablet.png 1x, img/promo-image-tablet@2x.png 2x" width="709" height="609">
             <img class="promo__image" src="img/promo-image-mobile.png" srcset="img/promo-image-mobile@2x.png 2x" width="280" height="270" alt="Изображение корма фирмы 'Кэт энерджи' со вкусом курицы.">
           </picture>
           <a class="promo__button button" href="form.html">Подобрать программу</a>
@@ -87,7 +87,7 @@
               <p class="guide__list-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="guide__list-item guide__list-item--time">
-              <p class="guide__list-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+              <p class="guide__list-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p>
             </li>
           </ul>
         </div>
@@ -107,14 +107,14 @@
               <dd class="example-cat__description-text">60 дней</dd>
             </div>
           </dl>
-          <span class="example-cat__costs-caption">Затраты на питание:<br class="example-cat__line-break"> 15 000 руб.</span>
+          <span class="example-cat__costs-caption">Затраты на питание:<span class="example-cat__line-break"></span> 15 000 руб.</span>
           <figure class="example-cat__image-wrapper slider">
             <div class="slider__toggle"></div>
             <picture>
               <source type="image/webp" media="(min-width: 768px)" srcset="img/cat-slide-tablet.webp 1x, img/cat-slide-tablet@2x.webp 2x" width="560" height="512">
               <source type="image/webp" srcset="img/cat-slide-mobile.webp 1x, img/cat-slide-mobile@2x.webp 2x">
 
-              <source media="(min-width: 768px)" srcset="img/cat-slide-tablet.png 1x, img/cat-slide-tablet@2x.png 2x" width="560" height="512">
+              <source type="image/png" media="(min-width: 768px)" srcset="img/cat-slide-tablet.png 1x, img/cat-slide-tablet@2x.png 2x" width="560" height="512">
               <img class="slider__image" src="img/cat-slide-mobile.png" srcset="img/cat-slide-mobile@2x.png 2x" width="280" height="256" alt="Кот Борис до и после употребления корма 'Кэт энерджи'.">
             </picture>
             <figcaption class="visually-hidden">Кот Борис до и после употребления корма "Кэт Энерджи".</figcaption>
@@ -125,7 +125,7 @@
       <section class="address">
         <div class="container">
           <div class="address__wrapper">
-            <h2 class="address__title heading">Приглашаем к сотрудничеству дилеров!</h2>
+            <h2 class="address__title heading">Приглашаем<br>к сотрудничеству дилеров!</h2>
             <p class="address__text">ул.&nbsp;Большая<br> Конюшенная, д.&nbsp;19/8 <span class="address__text-line-break">Санкт-Петербург</span></p>
           </div>
         </div>
