--- a/source/catalog.html
+++ b/source/catalog.html
@@ -56,7 +56,7 @@
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-1-tablet.webp 1x, img/catalog-1-tablet@2x.webp 2x" width="161" height="172">
                     <source type="image/webp" srcset="img/catalog-1-mobile.webp 1x, img/catalog-1-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 768px)" srcset="img/catalog-1-tablet.png 1x, img/catalog-1-tablet@2x.png 2x" width="161" height="172">
+                    <source type="image/png" media="(min-width: 768px)" srcset="img/catalog-1-tablet.png 1x, img/catalog-1-tablet@2x.png 2x" width="161" height="172">
                     <img class="product-card-main__image" src="img/catalog-1-mobile.jpg" srcset="img/catalog-1-mobile@2x.jpg 2x" width="68" height="86" alt="">
                   </picture>
                 </a>
@@ -64,7 +64,7 @@
                 <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
-                    <dd class="product-card-main__description">500г</dd>
+                    <dd class="product-card-main__description">500&nbsp;г</dd>
                   </div>
 
                   <div class="product-card-main__product-details-wrapper">
@@ -74,11 +74,11 @@
 
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Цена</dt>
-                    <dd class="product-card-main__description">700 &#8381;</dd>
+                    <dd class="product-card-main__description">700&nbsp;&#8381;</dd>
                   </div>
                 </dl>
+                <a class="product-card-main__link button" href="#">Заказать</a>
               </div>
-              <a class="product-card-main__link button" href="#">Заказать</a>
             </li>
 
             <li class="product-list-main__item product-card-main">
@@ -89,8 +89,8 @@
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-2-tablet.webp 1x, img/catalog-2-tablet@2x.webp 2x" width="168" height="206">
                     <source type="image/webp" srcset="img/catalog-2-mobile.webp 1x, img/catalog-2-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 1200px)" srcset="img/catalog-2-desktop.png 1x, img/catalog-2-desktop@2x.png 2x" width="172" height="196">
-                    <source media="(min-width: 768px)" srcset="img/catalog-2-tablet.png 1x, img/catalog-2-tablet@2x.png 2x" width="168" height="206">
+                    <source type="image/png" media="(min-width: 1200px)" srcset="img/catalog-2-desktop.png 1x, img/catalog-2-desktop@2x.png 2x" width="172" height="196">
+                    <source type="image/png" media="(min-width: 768px)" srcset="img/catalog-2-tablet.png 1x, img/catalog-2-tablet@2x.png 2x" width="168" height="206">
                     <img class="product-card-main__image" src="img/catalog-2-mobile.jpg" srcset="img/catalog-2-mobile@2x.jpg 2x" width="84" height="100" alt="">
                   </picture>
                 </a>
@@ -108,11 +108,11 @@
 
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Цена</dt>
-                    <dd class="product-card-main__description">1000 &#8381;</dd>
+                    <dd class="product-card-main__description">1000&nbsp;&#8381;</dd>
                   </div>
                 </dl>
+                <a class="product-card-main__link button" href="#">Заказать</a>
               </div>
-              <a class="product-card-main__link button" href="#">Заказать</a>
             </li>
 
             <li class="product-list-main__item product-card-main">
@@ -122,7 +122,7 @@
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-3-tablet.webp 1x, img/catalog-3-tablet@2x.webp 2x" width="163" height="174">
                     <source type="image/webp" srcset="img/catalog-3-mobile.webp 1x, img/catalog-3-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 768px)" srcset="img/catalog-3-tablet.png 1x, img/catalog-3-tablet@2x.png 2x" width="163" height="174">
+                    <source type="image/png" media="(min-width: 768px)" srcset="img/catalog-3-tablet.png 1x, img/catalog-3-tablet@2x.png 2x" width="163" height="174">
                     <img class="product-card-main__image" src="img/catalog-3-mobile.jpg" srcset="img/catalog-3-mobile@2x.jpg 2x" width="68" height="78" alt="">
                   </picture>
                 </a>
@@ -140,11 +140,11 @@
 
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Цена</dt>
-                    <dd class="product-card-main__description">700 &#8381;</dd>
+                    <dd class="product-card-main__description">700&nbsp;&#8381;</dd>
                   </div>
                 </dl>
+                <a class="product-card-main__link button" href="#">Заказать</a>
               </div>
-              <a class="product-card-main__link button" href="#">Заказать</a>
             </li>
 
             <li class="product-list-main__item product-card-main">
@@ -155,8 +155,8 @@
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-4-tablet.webp 1x, img/catalog-4-tablet@2x.webp 2x" width="168" height="206">
                     <source type="image/webp" srcset="img/catalog-4-mobile.webp 1x, img/catalog-4-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 1200px)" srcset="img/catalog-4-desktop.png 1x, img/catalog-4-desktop@2x.png 2x" width="172" height="196">
-                    <source media="(min-width: 768px)" srcset="img/catalog-4-tablet.png 1x, img/catalog-4-tablet@2x.png 2x" width="168" height="206">
+                    <source type="image/png" media="(min-width: 1200px)" srcset="img/catalog-4-desktop.png 1x, img/catalog-4-desktop@2x.png 2x" width="172" height="196">
+                    <source type="image/png" media="(min-width: 768px)" srcset="img/catalog-4-tablet.png 1x, img/catalog-4-tablet@2x.png 2x" width="168" height="206">
                     <img class="product-card-main__image" src="img/catalog-4-mobile.jpg" srcset="img/catalog-4-mobile@2x.jpg 2x" width="84" height="100" alt="">
                   </picture>
                 </a>
@@ -174,11 +174,11 @@
 
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Цена</dt>
-                    <dd class="product-card-main__description">1000 &#8381;</dd>
+                    <dd class="product-card-main__description">1000&nbsp;&#8381;</dd>
                   </div>
                 </dl>
+                <a class="product-card-main__link button" href="#">Заказать</a>
               </div>
-              <a class="product-card-main__link button" href="#">Заказать</a>
             </li>
 
             <li class="product-list-main__item product-card-main">
@@ -188,7 +188,7 @@
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-5-tablet.webp 1x, img/catalog-5-tablet@2x.webp 2x" width="163" height="174">
                     <source type="image/webp" srcset="img/catalog-5-mobile.webp 1x, img/catalog-5-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 768px)" srcset="img/catalog-5-tablet.png 1x, img/catalog-5-tablet@2x.png 2x" width="163" height="174">
+                    <source type="image/png" media="(min-width: 768px)" srcset="img/catalog-5-tablet.png 1x, img/catalog-5-tablet@2x.png 2x" width="163" height="174">
                     <img class="product-card-main__image" src="img/catalog-5-mobile.jpg" srcset="img/catalog-5-mobile@2x.jpg 2x" width="68" height="78" alt="">
                   </picture>
                 </a>
@@ -206,11 +206,11 @@
 
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Цена</dt>
-                    <dd class="product-card-main__description">400 &#8381;</dd>
+                    <dd class="product-card-main__description">400&nbsp;&#8381;</dd>
                   </div>
                 </dl>
+                <a class="product-card-main__link button" href="#">Заказать</a>
               </div>
-              <a class="product-card-main__link button" href="#">Заказать</a>
             </li>
 
             <li class="product-list-main__item product-card-main">
@@ -221,8 +221,8 @@
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-6-tablet.webp 1x, img/catalog-6-tablet@2x.webp 2x" width="168" height="206">
                     <source type="image/webp" srcset="img/catalog-6-mobile.webp 1x, img/catalog-6-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 1200px)" srcset="img/catalog-6-desktop.png 1x, img/catalog-6-desktop@2x.png 2x" width="172" height="196">
-                    <source media="(min-width: 768px)" srcset="img/catalog-6-tablet.png 1x, img/catalog-6-tablet@2x.png 2x" width="168" height="206">
+                    <source type="image/png" media="(min-width: 1200px)" srcset="img/catalog-6-desktop.png 1x, img/catalog-6-desktop@2x.png 2x" width="172" height="196">
+                    <source type="image/png" media="(min-width: 768px)" srcset="img/catalog-6-tablet.png 1x, img/catalog-6-tablet@2x.png 2x" width="168" height="206">
                     <img class="product-card-main__image" src="img/catalog-6-mobile.jpg" srcset="img/catalog-6-mobile@2x.jpg 2x" width="84" height="100" alt="">
                   </picture>
                 </a>
@@ -240,11 +240,11 @@
 
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Цена</dt>
-                    <dd class="product-card-main__description">700 &#8381;</dd>
+                    <dd class="product-card-main__description">700&nbsp;&#8381;</dd>
                   </div>
                 </dl>
+                <a class="product-card-main__link button" href="#">Заказать</a>
               </div>
-              <a class="product-card-main__link button" href="#">Заказать</a>
             </li>
 
             <li class="product-list-main__item product-card-main">
@@ -254,7 +254,7 @@
                     <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog-7-tablet.webp 1x, img/catalog-7-tablet@2x.webp 2x" width="163" height="174">
                     <source type="image/webp" srcset="img/catalog-7-mobile.webp 1x, img/catalog-7-mobile@2x.webp 2x">
 
-                    <source media="(min-width: 768px)" srcset="img/catalog-7-tablet.png 1x, img/catalog-7-tablet@2x.png 2x" width="163" height="174">
+                    <source type="image/png" media="(min-width: 768px)" srcset="img/catalog-7-tablet.png 1x, img/catalog-7-tablet@2x.png 2x" width="163" height="174">
                     <img class="product-card-main__image" src="img/catalog-7-mobile.jpg" srcset="img/catalog-7-mobile@2x.jpg 2x" width="68" height="78" alt="">
                   </picture>
                 </a>
@@ -272,16 +272,16 @@
 
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Цена</dt>
-                    <dd class="product-card-main__description">500 &#8381;</dd>
+                    <dd class="product-card-main__description">500&nbsp;&#8381;</dd>
                   </div>
                 </dl>
+                <a class="product-card-main__link button" href="#">Заказать</a>
               </div>
-              <a class="product-card-main__link button" href="#">Заказать</a>
             </li>
 
             <li class="product-list-main__item product-card-main product-card-main--more">
               <div class="product-card-main__wrapper product-card-main__wrapper--more">
-                <h3 class="product-card-main__title product-card-main__title--more heading">Показать еще 100500 товаров</h3>
+                <h3 class="product-card-main__title product-card-main__title--more heading">Показать еще 100500&nbsp;товаров</h3>
                 <p class="product-card-main__description product-card-main__description--more">На самом деле вкусов гораздо больше!</p>
                 <a class="product-card-main__link product-card-main__link--more button" href="#">Показать все</a>
               </div>
@@ -293,7 +293,7 @@
         <section class="main-container__additional-products additional-products">
 
           <div class="decor-line">
-            <div class="container">
+            <div class="container decor-line__container">
               <h2 class="additional-products__title heading">Дополнительные товары</h2>
             </div>
           </div>
@@ -305,8 +305,8 @@
               <li class="product-list-additional__item product-card-additional">
                 <h3 class="product-card-additional__title heading">Сахарозаменитель</h3>
                 <dl class="product-card-additional__product-details">
-                  <dt class="product-card-additional__termin">1 упакова (100&nbsp;г)</dt>
-                  <dd class="product-card-additional__description">200 &#8381;</dd>
+                  <dt class="product-card-additional__termin">1 упаковка (100&nbsp;г)</dt>
+                  <dd class="product-card-additional__description">200&nbsp;&#8381;</dd>
                 </dl>
                 <a class="product-card-additional__link button" href="#">Заказать</a>
               </li>
@@ -315,7 +315,7 @@
                 <h3 class="product-card-additional__title heading">Питьевая вода</h3>
                 <dl class="product-card-additional__product-details">
                   <dt class="product-card-additional__termin">5 литров</dt>
-                  <dd class="product-card-additional__description">50 &#8381;</dd>
+                  <dd class="product-card-additional__description">50&nbsp;&#8381;</dd>
                 </dl>
                 <a class="product-card-additional__link button" href="#">Заказать</a>
               </li>
@@ -324,7 +324,7 @@
                 <h3 class="product-card-additional__title heading">Молоко</h3>
                 <dl class="product-card-additional__product-details">
                   <dt class="product-card-additional__termin">1 литр</dt>
-                  <dd class="product-card-additional__description">100 &#8381;</dd>
+                  <dd class="product-card-additional__description">100&nbsp;&#8381;</dd>
                 </dl>
                 <a class="product-card-additional__link button" href="#">Заказать</a>
               </li>
@@ -333,7 +333,7 @@
                 <h3 class="product-card-additional__title heading">Витамины</h3>
                 <dl class="product-card-additional__product-details">
                   <dt class="product-card-additional__termin">1 упаковка (30&nbsp;г)</dt>
-                  <dd class="product-card-additional__description">300 &#8381;</dd>
+                  <dd class="product-card-additional__description">300&nbsp;&#8381;</dd>
                 </dl>
                 <a class="product-card-additional__link button" href="#">Заказать</a>
               </li>
