--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,14 +13,13 @@
   <body class="page__body">
 
     <header class="main-header">
-      <div class="container main-header__wrapper">
+      <div class="main-header__wrapper">
         <a href="index.html" class="main-header__logo">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/trademark-desktop.svg" width="71" height="60">
-            <source media="(min-width: 768px)" srcset="img/trademark-tablet.svg" width="61" height="50">
-            <img src="img/trademark-mobile.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи'.">
+            <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg" width="202" height="60">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
+            <img src="img/logo-mobile.svg" width="191" height="38" alt="Логотип 'Кэт энерджи'.">
           </picture>
-          <img class="main-header__logo-image" src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
         </a>
         <nav class="main-header__nav main-nav main-nav--no-js">
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
@@ -60,7 +59,7 @@
                     <img class="product-card-main__image" src="img/catalog-1-mobile.jpg" srcset="img/catalog-1-mobile@2x.jpg 2x" width="68" height="86" alt="">
                   </picture>
                 </a>
-                <h3 class="product-card-main__title heading">Cat Energy PRO 500&nbsp;г</h3>
+                <a href="#" class="product-card-main__title-link"><h3 class="product-card-main__title heading">Cat Energy PRO 500&nbsp;г</h3></a>
                 <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
@@ -77,7 +76,7 @@
                     <dd class="product-card-main__description">700&nbsp;&#8381;</dd>
                   </div>
                 </dl>
-                <a class="product-card-main__link button" href="#">Заказать</a>
+                <a class="product-card-main__link button" href="form.html">Заказать</a>
               </div>
             </li>
 
@@ -94,7 +93,7 @@
                     <img class="product-card-main__image" src="img/catalog-2-mobile.jpg" srcset="img/catalog-2-mobile@2x.jpg 2x" width="84" height="100" alt="">
                   </picture>
                 </a>
-                <h3 class="product-card-main__title heading">Cat Energy PRO 1000&nbsp;г</h3>
+                <a href="#" class="product-card-main__title-link"><h3 class="product-card-main__title heading">Cat Energy PRO 1000&nbsp;г</h3></a>
                 <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
@@ -111,7 +110,7 @@
                     <dd class="product-card-main__description">1000&nbsp;&#8381;</dd>
                   </div>
                 </dl>
-                <a class="product-card-main__link button" href="#">Заказать</a>
+                <a class="product-card-main__link button" href="form.html">Заказать</a>
               </div>
             </li>
 
@@ -126,7 +125,7 @@
                     <img class="product-card-main__image" src="img/catalog-3-mobile.jpg" srcset="img/catalog-3-mobile@2x.jpg 2x" width="68" height="78" alt="">
                   </picture>
                 </a>
-                <h3 class="product-card-main__title heading">Cat Energy PRO 500&nbsp;г</h3>
+                <a href="#" class="product-card-main__title-link"><h3 class="product-card-main__title heading">Cat Energy PRO 500&nbsp;г</h3></a>
                 <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
@@ -143,7 +142,7 @@
                     <dd class="product-card-main__description">700&nbsp;&#8381;</dd>
                   </div>
                 </dl>
-                <a class="product-card-main__link button" href="#">Заказать</a>
+                <a class="product-card-main__link button" href="form.html">Заказать</a>
               </div>
             </li>
 
@@ -160,7 +159,7 @@
                     <img class="product-card-main__image" src="img/catalog-4-mobile.jpg" srcset="img/catalog-4-mobile@2x.jpg 2x" width="84" height="100" alt="">
                   </picture>
                 </a>
-                <h3 class="product-card-main__title heading">Cat Energy PRO 1000&nbsp;г</h3>
+                <a href="#" class="product-card-main__title-link"><h3 class="product-card-main__title heading">Cat Energy PRO 1000&nbsp;г</h3></a>
                 <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
@@ -177,7 +176,7 @@
                     <dd class="product-card-main__description">1000&nbsp;&#8381;</dd>
                   </div>
                 </dl>
-                <a class="product-card-main__link button" href="#">Заказать</a>
+                <a class="product-card-main__link button" href="form.html">Заказать</a>
               </div>
             </li>
 
@@ -192,7 +191,7 @@
                     <img class="product-card-main__image" src="img/catalog-5-mobile.jpg" srcset="img/catalog-5-mobile@2x.jpg 2x" width="68" height="78" alt="">
                   </picture>
                 </a>
-                <h3 class="product-card-main__title heading">Cat Energy SLIM 500&nbsp;г</h3>
+                <a href="#" class="product-card-main__title-link"><h3 class="product-card-main__title heading">Cat Energy SLIM 500&nbsp;г</h3></a>
                 <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
@@ -209,7 +208,7 @@
                     <dd class="product-card-main__description">400&nbsp;&#8381;</dd>
                   </div>
                 </dl>
-                <a class="product-card-main__link button" href="#">Заказать</a>
+                <a class="product-card-main__link button" href="form.html">Заказать</a>
               </div>
             </li>
 
@@ -226,7 +225,7 @@
                     <img class="product-card-main__image" src="img/catalog-6-mobile.jpg" srcset="img/catalog-6-mobile@2x.jpg 2x" width="84" height="100" alt="">
                   </picture>
                 </a>
-                <h3 class="product-card-main__title heading">Cat Energy SLIM 1000&nbsp;г</h3>
+                <a href="#" class="product-card-main__title-link"><h3 class="product-card-main__title heading">Cat Energy SLIM 1000&nbsp;г</h3></a>
                 <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
@@ -243,7 +242,7 @@
                     <dd class="product-card-main__description">700&nbsp;&#8381;</dd>
                   </div>
                 </dl>
-                <a class="product-card-main__link button" href="#">Заказать</a>
+                <a class="product-card-main__link button" href="form.html">Заказать</a>
               </div>
             </li>
 
@@ -258,7 +257,7 @@
                     <img class="product-card-main__image" src="img/catalog-7-mobile.jpg" srcset="img/catalog-7-mobile@2x.jpg 2x" width="68" height="78" alt="">
                   </picture>
                 </a>
-                <h3 class="product-card-main__title heading">Cat Energy SLIM 500&nbsp;г</h3>
+                <a href="#" class="product-card-main__title-link"><h3 class="product-card-main__title heading">Cat Energy SLIM 500&nbsp;г</h3></a>
                 <dl class="product-card-main__product-details">
                   <div class="product-card-main__product-details-wrapper">
                     <dt class="product-card-main__termin">Масса</dt>
@@ -275,7 +274,7 @@
                     <dd class="product-card-main__description">500&nbsp;&#8381;</dd>
                   </div>
                 </dl>
-                <a class="product-card-main__link button" href="#">Заказать</a>
+                <a class="product-card-main__link button" href="form.html">Заказать</a>
               </div>
             </li>
 
@@ -293,8 +292,8 @@
         <section class="main-container__additional-products additional-products">
 
           <div class="decor-line">
-            <div class="container decor-line__container">
-              <h2 class="additional-products__title heading">Дополнительные товары</h2>
+            <div class="container">
+              <h2 class="additional-products__title decor-line__inner heading">Дополнительные товары</h2>
             </div>
           </div>
 
@@ -303,39 +302,39 @@
             <ul class="additional-products__product-list product-list-additional">
 
               <li class="product-list-additional__item product-card-additional">
-                <h3 class="product-card-additional__title heading">Сахарозаменитель</h3>
+                <a href="#" class="product-card-additional__title-link"><h3 class="product-card-additional__title heading">Сахарозаменитель</h3></a>
                 <dl class="product-card-additional__product-details">
                   <dt class="product-card-additional__termin">1 упаковка (100&nbsp;г)</dt>
                   <dd class="product-card-additional__description">200&nbsp;&#8381;</dd>
                 </dl>
-                <a class="product-card-additional__link button" href="#">Заказать</a>
+                <a class="product-card-additional__link button" href="form.html">Заказать</a>
               </li>
 
               <li class="product-list-additional__item product-card-additional">
-                <h3 class="product-card-additional__title heading">Питьевая вода</h3>
+                <a href="#" class="product-card-additional__title-link"><h3 class="product-card-additional__title heading">Питьевая вода</h3></a>
                 <dl class="product-card-additional__product-details">
                   <dt class="product-card-additional__termin">5 литров</dt>
                   <dd class="product-card-additional__description">50&nbsp;&#8381;</dd>
                 </dl>
-                <a class="product-card-additional__link button" href="#">Заказать</a>
+                <a class="product-card-additional__link button" href="form.html">Заказать</a>
               </li>
 
               <li class="product-list-additional__item product-card-additional">
-                <h3 class="product-card-additional__title heading">Молоко</h3>
+                <a href="#" class="product-card-additional__title-link"><h3 class="product-card-additional__title heading">Молоко</h3></a>
                 <dl class="product-card-additional__product-details">
                   <dt class="product-card-additional__termin">1 литр</dt>
                   <dd class="product-card-additional__description">100&nbsp;&#8381;</dd>
                 </dl>
-                <a class="product-card-additional__link button" href="#">Заказать</a>
+                <a class="product-card-additional__link button" href="form.html">Заказать</a>
               </li>
 
               <li class="product-list-additional__item product-card-additional">
-                <h3 class="product-card-additional__title heading">Витамины</h3>
+                <a href="#" class="product-card-additional__title-link"><h3 class="product-card-additional__title heading">Витамины</h3></a>
                 <dl class="product-card-additional__product-details">
                   <dt class="product-card-additional__termin">1 упаковка (30&nbsp;г)</dt>
                   <dd class="product-card-additional__description">300&nbsp;&#8381;</dd>
                 </dl>
-                <a class="product-card-additional__link button" href="#">Заказать</a>
+                <a class="product-card-additional__link button" href="form.html">Заказать</a>
               </li>
             </ul>
 
@@ -354,6 +353,17 @@
           </div>
         </div>
         <div class="address__map map">
+          <noscript>
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/map-desktop.webp 1x, img/map-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet.webp 1x, img/map-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/map-mobile.webp 1x, img/map-mobile@2x.webp 2x">
+
+              <source type="image/jpg" media="(min-width: 1200px)" srcset="img/map-desktop.jpg 1x, img/map-desktop@2x.jpg 2x">
+              <source type="image/jpg" media="(min-width: 768px)" srcset="img/map-tablet.jpg 1x, img/map-tablet@2x.jpg 2x">
+              <img class="map__image map__image--noscript" src="img/map-mobile.jpg" srcset="img/map-mobile@2x.jpg 2x" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
+            </picture>
+          </noscript>
           <iframe class="map__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1682413769572!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Карта местоположения компании 'Кэт энерджи'."></iframe>
         </div>
       </section>
@@ -365,7 +375,7 @@
         <section class="main-footer__contacts contacts">
           <h2 class="visually-hidden">Контакты.</h2>
           <a class="contacts__logo" href="index.html">
-            <img class="contacts__logo-image" src="img/logo.svg" width="128" height="25" alt="Логотип 'Кэт энерджи'.">
+            <img class="contacts__logo-image" src="img/footer-logo.svg" width="128" height="25" alt="Логотип 'Кэт энерджи'.">
           </a>
         </section>
 
