--- a/source/form.html
+++ b/source/form.html
@@ -16,11 +16,10 @@
       <div class="main-header__wrapper">
         <a href="index.html" class="main-header__logo">
           <picture>
-            <source media="(min-width: 1200px)" srcset="img/trademark-desktop.svg" width="71" height="60">
-            <source media="(min-width: 768px)" srcset="img/trademark-tablet.svg" width="61" height="50">
-            <img src="img/trademark-mobile.svg" width="34" height="38" alt="Фирменный знак 'Кэт энерджи'.">
+            <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg" width="202" height="60">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
+            <img src="img/logo-mobile.svg" width="191" height="38" alt="Логотип 'Кэт энерджи'.">
           </picture>
-          <img class="main-header__logo-image" src="img/logo.svg" width="101" height="18" alt="Логотип 'Кэт энерджи'.">
         </a>
         <nav class="main-header__nav main-nav main-nav--no-js">
           <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню.</span></button>
@@ -50,7 +49,7 @@
         </div>
 
         <div class="program-form__inner">
-          <fieldset class="program-form__group program-form__group--cat">
+          <fieldset class="program-form__group">
             <legend class="visually-hidden">Основная информация о коте.</legend>
 
             <div class="container program-form__container program-form__input-wrapper program-form__input-wrapper--cat">
@@ -106,8 +105,8 @@
         <fieldset class="program-form__group">
 
           <legend class="program-form__group-title-wrapper decor-line decor-line--owner">
-            <span class="container decor-line__container">
-              <span class="program-form__group-title">Контактные данные<br class="program-form__line-break"> (владельца кота)</span>
+            <span class="container">
+              <span class="program-form__group-title decor-line__inner">Контактные данные<br class="program-form__line-break"> (владельца кота)</span>
             </span>
           </legend>
 
@@ -127,8 +126,8 @@
         <fieldset class="program-form__group">
 
           <legend class="program-form__group-title-wrapper decor-line">
-            <span class="container decor-line__container">
-              <span class="program-form__group-title">Комментарий</span>
+            <span class="container">
+              <span class="program-form__group-title decor-line__inner">Комментарий</span>
             </span>
           </legend>
 
@@ -143,8 +142,8 @@
         <fieldset class="program-form__group program-form__group--additional">
 
           <legend class="program-form__group-title-wrapper program-form__group-title-wrapper--additional decor-line">
-            <span class="container decor-line__container">
-              <span class="program-form__group-title">Дополнительно</span>
+            <span class="container">
+              <span class="program-form__group-title decor-line__inner">Дополнительно</span>
             </span>
           </legend>
 
@@ -201,6 +200,17 @@
           </div>
         </div>
         <div class="address__map map">
+          <noscript>
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/map-desktop.webp 1x, img/map-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet.webp 1x, img/map-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/map-mobile.webp 1x, img/map-mobile@2x.webp 2x">
+
+              <source type="image/jpg" media="(min-width: 1200px)" srcset="img/map-desktop.jpg 1x, img/map-desktop@2x.jpg 2x">
+              <source type="image/jpg" media="(min-width: 768px)" srcset="img/map-tablet.jpg 1x, img/map-tablet@2x.jpg 2x">
+              <img class="map__image map__image--noscript" src="img/map-mobile.jpg" srcset="img/map-mobile@2x.jpg 2x" width="320" height="362" alt="Карта местоположения компании 'Кэт энерджи'.">
+            </picture>
+          </noscript>
           <iframe class="map__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197866!2d30.320472476852885!3d59.93871916209409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1682413769572!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Карта местоположения компании 'Кэт энерджи'."></iframe>
         </div>
       </section>
@@ -212,7 +222,7 @@
         <section class="main-footer__contacts contacts">
           <h2 class="visually-hidden">Контакты.</h2>
           <a class="contacts__logo" href="index.html">
-            <img class="contacts__logo-image" src="img/logo.svg" width="128" height="25" alt="Логотип 'Кэт энерджи'.">
+            <img class="contacts__logo-image" src="img/footer-logo.svg" width="128" height="25" alt="Логотип 'Кэт энерджи'.">
           </a>
         </section>
 
